Preventing comments from SASS invisibles making their wayt into compiled css
- And moving animations to a utiltiy file so they only get compiled once

--- a/src/global_styling/mixins/_states.scss
+++ b/src/global_styling/mixins/_states.scss
@@ -14,20 +14,5 @@ $euiFocusRingSizeLarge: 4px;
   }
 }
 
-@keyframes focusRingAnimate {
-  0% {
-    box-shadow: 0 0 0 6px $euiFocusRingAnimStartColor;
-  }
-  100% {
-    box-shadow: 0 0 0 $euiFocusRingSize $euiFocusRingColor;
-  }
-}
-
-@keyframes focusRingAnimateLarge {
-  0% {
-    box-shadow: 0 0 0 10px $euiFocusRingAnimStartColor;
-  }
-  100% {
-    box-shadow: 0 0 0 $euiFocusRingSizeLarge $euiFocusRingColor;
-  }
-}
+// Keyframe animation declarations can be found in
+// utility/animations.scss
